--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.6",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
